[project]
name = "telemetry"
version = "0.1.0"
description = "F1 25 Real-Time Telemetry Plotter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqtgraph>=0.14.0",
    "websockets>=16.0",
]

[project.scripts]
telemetry = "telemetry.__main__:main"
telemetry-playback = "telemetry.playback:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
